# gravity_simulation

./: .gitignore  CMakeLists.txt  README.md
cmake_checks/: cpu_avx.c  cpu_avx2.c  cpu_avx512f.c  cpu_sse.c  cpu_sse2.c
src/: config.h  main.c  main_avx2.c  main_avx2.h  main_avx512.c  main_avx512.h  main_scalar.c  main_scalar.h  particle_system.c  particle_system.h  particle_system_avx.c  particle_system_avx.h  particle_system_avx512f.c  particle_system_avx512f.h  particle_system_scalar.c  particle_system_scalar.h  particle_system_sse.c  particle_system_sse.h  random.c  random.h  simd_util.c  simd_util.h  stb_image_write.c  timer.c  timer.h  util.c  util.h  video_encoder.c  video_encoder.h
